<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.recipedetail.RecipeDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            style="?attr/collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/expandedImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="TODO"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image"
                app:layout_collapseMode="parallax" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:foregroundTintMode="multiply"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:title=" " />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="64dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Scrollable content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Recipe Name" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                tools:text="Recipe Beschreibung, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />

            <LinearLayout
                android:id="@+id/ll_time_difficulty_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_description">

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight=".5"
                    android:gravity="end"
                    android:textSize="16sp"
                    tools:text="Time" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/tvDifficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight=".5"
                    android:gravity="start"
                    android:textSize="16sp"
                    tools:text="Difficulty" />

            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_filters"
                style="@style/Widget.Material3.ChipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_time_difficulty_container">

            </com.google.android.material.chip.ChipGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_serves"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_serves_container"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cg_filters">

                <TextView
                    android:id="@+id/tv_servings_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/servings"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_servings_header">

                    <Button
                        android:id="@+id/btn_remove_serving"
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="-" />

                    <TextView
                        android:id="@+id/tv_number_servings"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="2"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSurfaceVariant" />

                    <Button
                        android:id="@+id/btn_add_serving"
                        style="?attr/materialIconButtonFilledTonalStyle"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:text="+" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_ingredients_header"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/ingredients"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cl_serves" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_ingredients_header"
                tools:listitem="@layout/item_recyclerview_ingredients" />

            <TextView
                android:id="@+id/tv_steps_header"
                style="@style/TextAppearance.Material3.HeadlineMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/instructions"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_steps_header"
                tools:listitem="@layout/item_recyclerview_steps" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        style="?attr/materialIconButtonFilledTonalStyle"
        android:layout_width="wrap_content"

        android:backgroundTint="#FFFFFF"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:elevation="5dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:maxImageSize="36dp"
        app:layout_anchor="@+id/top_app_bar_layout"
        app:layout_anchorGravity="bottom|end"
        app:pressedTranslationZ="12dp"
        app:tint="@color/favorite_heart" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>